# 4clicks

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: logger.py  main.py  var_type.py
app/api/: error_handlers.py
app/api/v1/: inventory.py  params.py  projects.py  ssh_keys.py  tasks.py  terraforms.py  variables.py  workspaces.py
app/databases/: database.py  models.py
app/exceptions/: exceptions.py
app/repositories/: __init__.py  inventory_repository.py  task_repository.py  variable_repository.py
app/schemas/: __init__.py  inventory_schema.py  project_schema.py  task_schema.py  variable_schema.py  workspace_schema.py
app/services/: inventory_services.py  project_services.py  ssh_key_service.py  task_execution_service.py  task_template_service.py  terraform_services.py  variable_services.py  workspace_services.py
tests/: test_project_services.py  test_projects.py  test_terraform_api.py  test_terraform_services.py  test_workspace_services.py  test_workspaces.py
